--- a/apps/base/nginx/nginx-deployment.yaml
+++ b/apps/base/nginx/nginx-deployment.yaml
@@ -2,10 +2,10 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   labels:
-    app: example1
+    app: nginx
   name: nginx
 spec:
-  replicas: 2
+  replicas: 1
   selector:
     matchLabels:
       app: nginx
